	  directory.
	- If the error, "Never use <adxintrin.h> directly", displays, the
	  Oovaide project must be set to exclude lib dir for analysis.

Code/Design Guidelines
-----------
	- Error handling strategy - See OovError.h, OovStatus class.
	- OovCommon is a shared library between many components
	- OovGuiCommon is only used for GUI (GTK) components

Missing Features
----------------
- General
	- Java
	   - Variables in methods <BodyVarDecl> in xmi?
	   - constructors?
           - virtual functions
           - switch/case
	   - cmake

	- gtk3
		- msys2
		- https://blogs.gnome.org/nacho/2014/06/26/gtk-builder-for-windows/
			- https://mail.gnome.org/archives/gtkmm-list/2014-January/msg00011.html
			- https://git.gnome.org/browse/gtk-builder-win
			- http://win-builds.org
		- 3.8 - http://sourceforge.net/projects/gtk3win
	- Shouldn't have to  rebuild everything if project directories change
	- code count mismatch from database:
		makeCoverageStats not showing as overloaded. (one is static)
	- Preserve state between sessions
	- https://github.com/rdp/open-source-how-to-popularize-your-project
	- http://keywordtool.io/search
		- C++ class diagram: automatic, reverse engineering
		- C++ ide: simple, clang
		- C++ analysis: architecture
		- C++ architecture: class, component, application, plugin, layered
	- add notes/title box (class name, file name, etc.)
	- add font size for drawings, display and print
	- remove sleepMs calls in windowsChildProcessListen
	- remove mingw dependencies from common - Sleep/chrono/pthread-gthread
	- BUG: doing File/New on an existing project doesn't delete package config.
	- Need to clean up package config if user reenters data.
	- link to https://rawgit.com/animatedb/oovaide/master/web/articles/PortionDiagrams.html
	- Add UML notes to diagrams, allow color/font selection
	- in ModelObjects, getRelatedFuncParamClasses and getRelatedFuncInterfaceClasses
	  are the same?
- Gui
	- Add External Directories button for Build Arguments dialog.