@@ -45,9 +45,9 @@ set(DL_LIBRARIES dl)
 # LLVM - Neither LLVM or CLANG are in /usr/share/cmake*/Modules at least up to LLVM 3.6
 # pkg_check_modules(CLANG REQUIRED libclang-dev)
 # pkg_check_modules(LLVM REQUIRED llvm)
-include_directories(/usr/lib/llvm-3.5/include)
+include_directories(/usr/lib/llvm-3.6/include)
 cmake_policy(SET CMP0015 NEW)
-link_directories(/usr/lib/llvm-3.5/lib)
+link_directories(/usr/lib/llvm-3.6/lib)
 set(LLVM_LIBRARIES clang)
 # include_directories(${LLVM_INCLUDE_DIRS})
 # link_directories(${LLVM_LIBRARY_DIRS})
