@@ -24,7 +24,9 @@ The following lists releases in reverse chronological order.<br>
 <br>
 
 <h2>2015-11</h2>
+  <li>Added Java analysis</li>
   <li>Fixed open project if source directory is incorrect</li>
+  <li>Fixed single output projects with nested directories</li>
 
 <h2>2015-10-2</h2>
   <li>Added component types and line number information to sqlite database</li>
