@@ -34,7 +34,9 @@ Code/Design Guidelines
 Missing Features
 ----------------
 - General
+	- Font size (bug on github), save font size in drawings
 	- Java
+	   - Java Build - manifest
 	   - Variables in methods <BodyVarDecl> in xmi?
 	   - constructors?
            - virtual functions
